--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,16 @@
     display: flex;
     flex-wrap: wrap;
     border: solid 1px black;
+    margin-left: auto;
+    margin-right: auto;
 
+}
+
+#resetButton{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
 }
 
 .hoveredEffect{
