--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,18 @@
     margin-bottom: 20px;
 }
 
+#colorButtonContainers{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+#rainbowButton{
+    display: flex;
+    align-items: center;
+}
+
 .hoveredEffect{
     background-color: black;
 }
